2006-04-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (GNU Sample Texts): GFDL is version 1.2 now.
	Report from Claudio.

2006-03-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Command Expansion): use U+2605 for
	@point{} and U+22A3 for @print{}.  From Patrice.

2006-03-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (copying): warn not to indent lines within the
	@copying.

2006-03-24  Karl Berry  <karl@gnu.org>

	* makeinfo/html.c (escape_string): do not free the old string,
	that is dangerous, only the caller should do it.
	(add_link): escape the title string.
	Report from Ralf Wildenhues, 17 Mar 2006 05:08:11 +0100.

2006-03-21  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\parseargusing, \finishparsearg): Use \argtorun
	  instead of \next.
	(\argcheckspacesY): Change the wording of the comment about \next.
	(\braceorline, \braceorlinexxx): Do not suppose that \next is
	  preserved during the run of \parsearg, anyway.

2006-03-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (section, subsection, unnumberedsubsec,
	subsubsection): make it clear that @section can be used within
	any chapter unit.
	Report from: Hynek Hanke, 11 Mar 2006 20:44:34 +0100.

	* doc/texinfo.tex (\imagexxx): do not center the image by default.
	The manual says we don't do that, and Lilypond needs
	left-justification.
	From: Han-Wen Nienhuys, 9 Mar 2006 21:08:26 +0000.

2006-03-13  Miloslav Trmac  <mitr@redhat.com>  (tiny changes)

        * info/Makefile.am (infokey_LDADD): don't link with curses.

        * makeinfo/sectioning.c: cast arguments to substring, to placate
        current gcc.

2006-03-13  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: reindent --help message.

2006-03-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Writing a Node): show example of specifying
	some pointers but not others.

2006-02-28  Akim Demaille  <akim@epita.fr>

	Be robust to spaces in directory names.
	* util/texi2dvi (absolute): Be robust to non directories.