@@ -1,3 +1,8 @@
+2006-04-13  Karl Berry  <karl@gnu.org>
+
+	* makeinfo/insertion.c (end_insertion): kill_self_indent(-1) to
+	remove all indentation.  From Brian Gough, 11 Apr 2006 16:42:29 +0100.
+
 2006-04-11  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (GNU Sample Texts): GFDL is version 1.2 now.
